--- a/css/registerUser.css
+++ b/css/registerUser.css
@@ -49,7 +49,7 @@ body {
 
 .registerButtonContainer {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 .registerButton {
