--- a/css/adminDashboard.css
+++ b/css/adminDashboard.css
@@ -12,7 +12,6 @@ header {
     padding: 0 40px;
     height: 70px;
     background-color: #ffffff;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
 }
 
 .header-left, .header-right{
@@ -63,6 +62,40 @@ header {
     background-color: #f1f1f1; 
 }
 
+.admin-nav-bar {
+    background-color: #32749a;
+    border-bottom: 1px solid #ddd;
+    padding: 10px 20px;
+}
+
+.nav-links {
+    display: flex;
+    gap: 30px;
+}
+
+.nav-item {
+    text-decoration: none;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 0.95rem;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.nav-item::after {
+    display: block;
+    content: attr(data-text);
+    font-weight: bold;
+    height: 0;
+    overflow: hidden;
+    visibility: hidden;
+}
+
+.nav-item:hover {
+    font-weight: bold;
+}
 
 .show { 
     display: block !important; 
