--- a/css/accInfo.css
+++ b/css/accInfo.css
@@ -1,23 +1,27 @@
 .acc-info-container {
     background-color: white;
-    padding: 15px 40px 15px 40px;
-    margin: 50px auto 0px auto; 
+    padding: 5px 40px 15px 40px;
+    margin: 40px auto 50px auto; 
     width: 85%;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
 }
 
+.form-title-container {   
+    border-bottom: #333 1px solid;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+
 .form-title {
-    margin-bottom: 30px;
-    padding-bottom: 10px;
     font-size: 24px;
     font-weight: bold;
     color: #333;
-    border-bottom: #333 1px solid;
 }
 
 .row {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
     display: flex;
     justify-content: space-between;
     gap: 30px;
@@ -37,7 +41,7 @@
     flex-shrink: 0;
 }
 .general-input {
-    width: 300px;
+    width: 270px;
     padding: 10px 12px;
     box-sizing: border-box;
     border: 1px solid #ccc;
@@ -50,9 +54,26 @@
 }
 
 .employment-date {
-    max-width: 130px;
+    max-width: 150px;
 }
 
 .hours-input {
-    max-width: 200px;
+    max-width: 180px;
+}
+
+
+.btn-submit-container {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 15px;
+}
+
+.btn-submit {
+    background-color: #32749a;
+    color: white;
+    font-weight: bolder;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
