--- a/css/internDashboardPublic.css
+++ b/css/internDashboardPublic.css
@@ -1,9 +1,9 @@
-body {
+html body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     box-sizing: border-box;
     margin: 0;
-    overflow-y: hidden;
+    /*overflow-y: hidden;*/
 }
 
 header {
@@ -66,7 +66,6 @@ header {
 
 .nav-bar {
     background-color: #32749a;
-    border-bottom: 1px solid #ddd;
     padding: 10px 20px;
 }
 
@@ -105,16 +104,7 @@ header {
     cursor: default;
 }
 
-.nav-item.active::before {
-    content: "";
-    position: absolute;
-    bottom: -10px;
-    left: 0;
-    width: 100%;
-    height: 3px;
-    background-color: #ffffff;
-    border-radius: 2px;
-}
+
 
 .show { 
     display: block !important; 
