--- a/css/public.css
+++ b/css/public.css
@@ -1,7 +1,10 @@
+* {
+    box-sizing: border-box;
+}
+
 html body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
-    box-sizing: border-box;
     margin: 0;
 }
 
