--- a/css/internDashboardMain.css
+++ b/css/internDashboardMain.css
@@ -222,7 +222,7 @@
     margin: 10% auto;
     padding: 0;
     border-radius: 10px;
-    width: 50%;
+    width: 100%;
     max-width: 600px;
     box-shadow: 0 5px 15px rgba(0,0,0,0.3);
     animation: slideDown 0.3s ease-out;
@@ -320,5 +320,9 @@
         overflow-y: auto !important;
         display: block !important; 
         padding-right: 10px;
+    }
+
+    .modal-content {
+        max-width: 400px;
     }
 }
