--- a/css/internsListPage.css
+++ b/css/internsListPage.css
@@ -53,7 +53,7 @@
 .modal-content {
     background-color: #fff;
     margin: 10% auto;
-    padding: 10px;
+    padding: 20px;
     border-radius: 10px;
     width: 100%;
     max-width: 600px;
@@ -67,7 +67,7 @@
 }
 
 .modal-header {
-    padding: 0 20px;
+    padding-right: 20px;
     border-bottom: 1px solid #eee;
     display: flex;
     justify-content: space-between;
