--- a/css/adminDashboardMain.css
+++ b/css/adminDashboardMain.css
@@ -42,3 +42,56 @@
     font-weight: 600;
     color: #32749a;
 }
+
+.content-container, .left-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 20px;
+}
+
+.left-container {    
+    width: 35%;
+    flex-direction: column;
+}
+
+.left-child-container { flex: 1; }
+
+.left-child-container:hover { 
+    cursor: pointer; 
+    background-color: #f9f9f9;
+}
+
+.current-interns-number, .current-pending-requests-number {
+    width: 100%;
+    background-color: #fff;
+    padding: 5px 13px 15px 13px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    text-align: center;
+}
+
+.real-time-notif-container {        
+    width: 60%;
+    height: 380px;
+    flex-direction: column;
+    background-color: #fff;
+    padding: 5px 13px 15px 13px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 10px;
+    flex: 1;
+    text-align: center;
+}
+
+.container-label {
+    margin: 0;
+    margin-top: 15px;
+    padding-bottom: 10px;
+    font-size: 18px;
+    border-bottom: #333 1px solid;
+}
+
+.result-container {
+    font-size: 18px;
+}
