--- a/css/public.css
+++ b/css/public.css
@@ -107,6 +107,11 @@ header {
     pointer-events: hidden;
 }
 
+.nav-item:focus {
+    outline: 0;
+    border: #fff 0.5px solid;
+}
+
 .nav-item:hover {
     font-weight: 600;
 }
