--- a/css/adminDashboardMain.css
+++ b/css/adminDashboardMain.css
@@ -81,12 +81,10 @@
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     border-radius: 10px;
     flex: 1;
-    text-align: center;
 }
 
 .container-label {
-    margin: 0;
-    margin-top: 15px;
+    margin: 15px 0 0 0 !important;
     padding-bottom: 10px;
     font-size: 18px;
     border-bottom: #333 1px solid;
